[package]
name = "worlds-history-sim-rs"
version = "0.0.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
opt-level = 3
codegen-units = 1

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
  "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
env_logger = "0.10"
hecs = "0.10.3"
