[package]
name = "worlds-history-sim-rs"
version = "0.0.0"
edition = "2021"

[profile.release]
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
[profile.dev.build-override]
opt-level = 3
codegen-units = 1
[profile.release.build-override]
opt-level = 3
codegen-units = 1

[dependencies]
eframe = { version = "0.23.0", default-features = false, features = ["glow", "x11", "wayland", "default_fonts"] }
log = "0.4"
env_logger = "0.10"
hecs = "0.10.3"
egui_extras = { version = "0.23.0", features = ["image"] }
color-eyre = "0.6.2"
grid = "0.11.0"
